# MiniEngine3D

./: CMakeLists.txt  README.md
app/: main.cpp
engine/core/: Application.cpp  Application.h  Window.cpp  Window.h
engine/renderer/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
engine/scene/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
res/shaders/: basic.vert
